--- a/modules/administration-guide/pages/calculating-che-resource-requirements.adoc
+++ b/modules/administration-guide/pages/calculating-che-resource-requirements.adoc
@@ -16,7 +16,7 @@ Learn how to calculate resources, such as memory and CPU, required to run {prod}
 . Identify the workspace components explicitly specified in the `components` section of your devfile.
 When this section is empty, {prod-short} only loads the implicit components.
 +
-[cols="1a,1a,1a,1a,1a",options="header"]
+[cols="1a,1a,1a,1a,1a,1a,1a",options="header"]
 .Devfile specified workspace components memory requirements
 |===
 |Purpose
@@ -24,49 +24,65 @@ When this section is empty, {prod-short} only loads the implicit components.
 |Container name
 |Memory limit
 |Memory request
+|CPU limit
+|CPU request
 
 |Your developer tools
 |`workspace`
 |
 |
 |
+|
+|
 
 3+>s|Total
+>s|
+>s|
 >s|
 >s|
 |===
 . Identify the implicit workspace components that {prod-short} loads: developer tools, editor, and {prod-short} gateway.
 +
-[cols="1a,1a,1a,1a,1a",options="header"]
-.Implicit workspace components memory requirements
+[cols="1a,1a,1a,1a,1a,1a,1a",options="header"]
+.Implicit workspace components default requirements
 |===
 |Purpose
 |Pod
 |Container name
-|Default memory limit
-|Default memory request
+|Memory limit
+|Memory request
+|CPU limit
+|CPU request
 
 |Developer tools
 |`workspace`
 |`universal-developer-image`
 |1 GiB
 |256 MiB
+|500 m
+|30 m
 
 |Editor
 |`workspace`
 |`che-code`
 |128 MiB
 |32 MiB
+|500 m
+|30 m
 
 |{prod-short} gateway
 |`workspace`
 |`che-gateway`
 |256 Mi
 |64 Mi
+|500 m
+|50 m
 
 3+>s|Total
 >s|2.4 GiB
 >s|480 MiB
+>s|1.5
+>s|110 m
 |===
 
 
@@ -74,94 +90,149 @@ When this section is empty, {prod-short} only loads the implicit components.
 
 . Sum up the server components requirements.
 +
-[cols="1a,1a,1a,1a,1a",options="header"]
-.{prod-short} operator operands
+[cols="1a,1a,1a,1a,1a,1a,1a",options="header"]
+.{prod-short} server components default requirements
 |===
 |Purpose
 |Pod name
 |Container names
-|Default memory limit
-|Default memory request
+|Memory limit
+|Memory request
+|CPU limit
+|CPU request
 
 |{prod-short} operator
 |`{prod-id-short}-operator`
-|* `{prod-id-short}-operator`
-|* 256 MiB
-|* 64 MiB
+|`{prod-id-short}-operator`
+|256 MiB
+|64 MiB
+|500 m
+|100 m
 
 |{prod-short} Server
 |`{prod-id-short}`
-|* `{prod-id-short}-server`
-|* 1 Gi
-|* 512 MiB
+|`{prod-id-short}-server`
+|1 Gi
+|512 MiB
+|1
+|1 m
 
 |{prod-short} Dashboard
 |`{prod-id-short}-dashboard`
 |* `{prod-id-short}-dashboard`
-|* 256 MiB
-|* 32 MiB
+|256 MiB
+|32 MiB
+|500 m
+|100 m
 
 |{prod-short} Gateway
 |`{prod-id-short}-gateway`
-|
-* `traefik`
-* `configbump`
-* `oauth-proxy`
-* `kube-rbac-proxy`
-|
-* 4 GiB
-* 256 MiB
-* 512 MiB
-* 512 MiB
-|
-* 128 MiB
-* 64 MiB
-* 64 MiB
-* 64 MiB
+|`traefik`
+|4 GiB
+|128 MiB
+|1
+|100 m
+
+|{prod-short} Gateway
+|`{prod-id-short}-gateway`
+|`configbump`
+|256 MiB
+|64 MiB
+|500 m
+|50 m
+
+|{prod-short} Gateway
+|`{prod-id-short}-gateway`
+|`oauth-proxy`
+|512 MiB
+|64 MiB
+|500 m
+|100 m
+
+|{prod-short} Gateway
+|`{prod-id-short}-gateway`
+|`kube-rbac-proxy`
+|512 MiB
+|64 MiB
+|500 m
+|100 m
 
 |Devfile registry
 |`devfile-registry`
-|* `devfile-registry`
-|* 256 Mi
-|* 32 Mi
+|`devfile-registry`
+|256 Mi
+|32 Mi
+|500 m
+|100 m
 
 |Plugin registry
 |`plugin-registry`
-|* `plugin-registry`
-|* 256 Mi
-|* 32 Mi
+|`plugin-registry`
+|256 Mi
+|32 Mi
+|500 m
+|100 m
 
 |PostgreSQL database
 |`postgres`
-|* `postgres`
-|* 1 Gi
-|* 512 Mi
+|`postgres`
+|1 Gi
+|512 Mi
+|500 m
+|100 m
 
 |{devworkspace} Controller Manager
 |`{devworkspace-id}-controller-manager`
-|* `{devworkspace-id}-controller`
-* `kube-rbac-proxy`
-|* 1 GiB
-* N/A
-|* 100 MiB
-* N/A
+|`{devworkspace-id}-controller`
+|1 GiB
+|100 MiB
+|1
+|250 m
+
+|{devworkspace} Controller Manager
+|`{devworkspace-id}-controller-manager`
+|`kube-rbac-proxy`
+|N/A
+|N/A
+|N/A
+|N/A
+
+|{devworkspace} webhook server
+|`{devworkspace-id}-webhook-server`
+|`webhook-server`
+|300 MiB
+|29 MiB
+|200 m
+|100 m
 
 |{devworkspace} Operator Catalog
 |
-|* `registry-server`
-|* N/A
-|* 50 MiB
+|`registry-server`
+|N/A
+|50 MiB
+|N/A
+|10 m
 
 |{devworkspace} Webhook Server
-| `{devworkspace-id}-webhook-server`
-|* `{devworkspace-id}-controller`
-* `kube-rbac-proxy`
-|* 300 MiB
-|* 20 MiB
+|`{devworkspace-id}-webhook-server`
+|`webhook-server`
+|300 MiB
+|20 MiB
+|200 m
+|100 m
+
+|{devworkspace} Webhook Server
+|`{devworkspace-id}-webhook-server`
+|`kube-rbac-proxy`
+|N/A
+|N/A
+|N/A
+|N/A
 
 3+>s|Total
 >s|9.5 GiB
 >s|1.6 GiB
+>s|7.4
+>s|2.31
 
 |===
-
