--- a/modules/administration-guide/pages/calculating-che-resource-requirements.adoc
+++ b/modules/administration-guide/pages/calculating-che-resource-requirements.adoc
@@ -1,4 +1,4 @@
-:_content-type: ASSEMBLY
+:_content-type: PROCEDURE
 :description: Calculating {prod-short} resource requirements
 :keywords: administration-guide, calculating-che-resource-requirements
 :navtitle: Calculating Che resource requirements
@@ -8,21 +8,231 @@
 [id="calculating-{prod-id-short}-resource-requirements"]
 = Calculating {prod-short} resource requirements
 
+The {prod-short} Operator, {devworkspace} Controller, and user workspaces consist of a set of pods.
+The pods contribute to the resource consumption in CPU and memory limits and requests.
+Learn how to calculate resources, such as memory and CPU, required to run {prod}.
 
-The {prod-short} Operator, {devworkspace} Controller, and user workspaces consist of a set of pods. The pods contribute to the resource consumption in terms of CPU and RAM limits and requests. Learn how to calculate resources, such as memory and CPU, required to run {prod}.
+.Procedure
+. Identify the workspace components explicitly specified in the `components` section of your devfile.
+When this section is empty, {prod-short} only loads the implicit components.
++
+[cols="1a,1a,1a,1a,1a,1a,1a",options="header"]
+.Devfile specified workspace components memory requirements
+|===
+|Purpose
+|Pod
+|Container name
+|Memory limit
+|Memory request
+|CPU limit
+|CPU request
 
-include::partial$con_operator-requirements.adoc[leveloffset=+1]
+|Your developer tools
+|`workspace`
+|
+|
+|
+|
+|
 
-include::partial$con_controller-requirements.adoc[leveloffset=+1]
+3+>s|Total
+>s|
+>s|
+>s|
+>s|
+|===
+. Identify the implicit workspace components that {prod-short} loads: developer tools, editor, and {prod-short} gateway.
++
+[cols="1a,1a,1a,1a,1a,1a,1a",options="header"]
+.Implicit workspace components default requirements
+|===
+|Purpose
+|Pod
+|Container name
+|Memory limit
+|Memory request
+|CPU limit
+|CPU request
 
-include::partial$proc_workspaces-requirements.adoc[leveloffset=+1]
+|Developer tools
+|`workspace`
+|`universal-developer-image`
+|1 GiB
+|256 MiB
+|500 m
+|30 m
 
-include::partial$con_a-workspace-example.adoc[leveloffset=+1]
+|Editor
+|`workspace`
+|`che-code`
+|128 MiB
+|32 MiB
+|500 m
+|30 m
 
-.Additional resources
+|{prod-short} gateway
+|`workspace`
+|`che-gateway`
+|256 Mi
+|64 Mi
+|500 m
+|50 m
 
-* xref:architecture-overview.adoc[]
-* xref:understanding-the-checluster-custom-resource.adoc[]
-* link:https://github.com/eclipse-che/che-plugin-registry[{prod-short} plug-ins registry repository]
-* link:https://kubernetes.io/docs/concepts/configuration/manage-resources-containers/[Kubernetes resource management for pods and containers]
+3+>s|Total
+>s|2.4 GiB
+>s|480 MiB
+>s|1.5
+>s|110 m
+|===
 
+
+. Sum up the resources required for each workspace, and multiply them by the running workspaces count.
+
+. Sum up the server components requirements.
++
+[cols="1a,1a,1a,1a,1a,1a,1a",options="header"]
+.{prod-short} server components default requirements
+|===
+|Purpose
+|Pod name
+|Container names
+|Memory limit
+|Memory request
+|CPU limit
+|CPU request
+
+|{prod-short} operator
+|`{prod-id-short}-operator`
+|`{prod-id-short}-operator`
+|256 MiB
+|64 MiB
+|500 m
+|100 m
+
+|{prod-short} Server
+|`{prod-id-short}`
+|`{prod-id-short}-server`
+|1 Gi
+|512 MiB
+|1
+|1 m
+
+|{prod-short} Dashboard
+|`{prod-id-short}-dashboard`
+|* `{prod-id-short}-dashboard`
+|256 MiB
+|32 MiB
+|500 m
+|100 m
+
+|{prod-short} Gateway
+|`{prod-id-short}-gateway`
+|`traefik`
+|4 GiB
+|128 MiB
+|1
+|100 m
+
+|{prod-short} Gateway
+|`{prod-id-short}-gateway`
+|`configbump`
+|256 MiB
+|64 MiB
+|500 m
+|50 m
+
+|{prod-short} Gateway
+|`{prod-id-short}-gateway`
+|`oauth-proxy`
+|512 MiB
+|64 MiB
+|500 m
+|100 m
+
+|{prod-short} Gateway
+|`{prod-id-short}-gateway`
+|`kube-rbac-proxy`
+|512 MiB
+|64 MiB
+|500 m
+|100 m
+
+|Devfile registry
+|`devfile-registry`
+|`devfile-registry`
+|256 Mi
+|32 Mi
+|500 m
+|100 m
+
+|Plugin registry
+|`plugin-registry`
+|`plugin-registry`
+|256 Mi
+|32 Mi
+|500 m
+|100 m
+
+|PostgreSQL database
+|`postgres`
+|`postgres`
+|1 Gi
+|512 Mi
+|500 m
+|100 m
+
+|{devworkspace} Controller Manager
+|`{devworkspace-id}-controller-manager`
+|`{devworkspace-id}-controller`
+|1 GiB
+|100 MiB
+|1
+|250 m
+
+|{devworkspace} Controller Manager
+|`{devworkspace-id}-controller-manager`
+|`kube-rbac-proxy`
+|N/A
+|N/A
+|N/A
+|N/A
+
+|{devworkspace} webhook server
+|`{devworkspace-id}-webhook-server`
+|`webhook-server`
+|300 MiB
+|29 MiB
+|200 m
+|100 m
+
+|{devworkspace} Operator Catalog
+|
+|`registry-server`
+|N/A
+|50 MiB
+|N/A
+|10 m
+
+|{devworkspace} Webhook Server
+|`{devworkspace-id}-webhook-server`
+|`webhook-server`
+|300 MiB
+|20 MiB
+|200 m
+|100 m
+
+|{devworkspace} Webhook Server
+|`{devworkspace-id}-webhook-server`
+|`kube-rbac-proxy`
+|N/A
+|N/A
+|N/A
+|N/A
+
+3+>s|Total
+>s|9.5 GiB
+>s|1.6 GiB
+>s|7.4
+>s|2.31
+
+|===
