--- a/modules/administration-guide/pages/configuring-the-open-vsx-registry-url.adoc
+++ b/modules/administration-guide/pages/configuring-the-open-vsx-registry-url.adoc
@@ -1,7 +1,7 @@
 :_content-type: PROCEDURE
-:description: Open VSX registry URL
+:description: Configuring the Open VSX registry URL for all {prod} workspaces
 :keywords: administration guide, configuring, openvsx, registry
-:navtitle: Configuring Open VSX registry URL
+:navtitle: Open VSX registry URL
 :page-aliases:
 
 [id="configuring-the-open-vsx-registry-url"]
