--- a/modules/end-user-guide/pages/customizing-workspace-components.adoc
+++ b/modules/end-user-guide/pages/customizing-workspace-components.adoc
@@ -2,7 +2,7 @@
 :description: Customizing workspace components
 :keywords: user-guide, customizing-developer-environments
 :navtitle: Customizing workspace components
-:page-aliases: configuring-a-workspace-using-a-devfile.adoc, making-a-workspace-portable-using-a-devfile.adoc, authoring-devfiles-version-1.adoc, authoring-devfiles-version-2.adoc, authoring-devfiles.adoc,  defining-custom-commands-for-che-theia.adoc, adding-a-vs-code-extension-to-a-workspace.adoc, adding-a-vs-code-extension-to-the-che-plugin-registry.adoc, adding-tools-to-che-after-creating-a-workspace.adoc, using-private-container-registries.adoc, customizing-developer-environments.adoc, what-is-a-che-theia-plugin.adoc, testing-a-visual-studio-code-extension-in-che.adoc, publishing-metadata-for-a-vs-code-extension.adoc, contributor-guide:developing-che-theia-plugins.adoc, contributor-guide:testing-che-theia-plugins.adoc, contributor-guide:publishing-che-theia-plugins.adoc, contributor-guide:adding-support-for-a-new-language.adoc, contributor-guide:adding-support-for-a-new-debugger.adoc, contributor-guide:che-extensibility-reference.adoc, contributor-guide:che-extension-points.adoc, contributor-guide:che-theia-plugin-api.adoc, contributor-guide:debug-adapter-protocol.adoc, contributor-guide:language-server-protocol.adoc, customizing-workspaces-components.adoc
+:page-aliases: configuring-a-workspace-using-a-devfile.adoc, making-a-workspace-portable-using-a-devfile.adoc, authoring-devfiles-version-1.adoc, authoring-devfiles-version-2.adoc, authoring-devfiles.adoc,  defining-custom-commands-for-che-theia.adoc, adding-a-vs-code-extension-to-a-workspace.adoc, adding-a-vs-code-extension-to-the-che-plugin-registry.adoc, adding-tools-to-che-after-creating-a-workspace.adoc, using-private-container-registries.adoc, customizing-developer-environments.adoc, what-is-a-che-theia-plug-in.adoc, testing-a-visual-studio-code-extension-in-che.adoc, publishing-metadata-for-a-vs-code-extension.adoc, contributor-guide:developing-che-theia-plug-ins.adoc, contributor-guide:testing-che-theia-plug-ins.adoc, contributor-guide:publishing-che-theia-plug-ins.adoc, contributor-guide:adding-support-for-a-new-language.adoc, contributor-guide:adding-support-for-a-new-debugger.adoc, contributor-guide:che-extensibility-reference.adoc, contributor-guide:che-extension-points.adoc, contributor-guide:che-theia-plug-in-api.adoc, contributor-guide:debug-adapter-protocol.adoc, contributor-guide:language-server-protocol.adoc, customizing-workspaces-components.adoc
 
 // The application dashboard requires the presence of the `customizing-workspaces` id.
 [id="customizing-workspaces"]
