--- a/modules/end-user-guide/partials/proc_listing-workspaces.adoc
+++ b/modules/end-user-guide/partials/proc_listing-workspaces.adoc
@@ -4,6 +4,29 @@
 
 You can list your workspaces on a command line.
 
+.Prerequisites
+
+* An active `{orch-cli}` session on the cluster. See {orch-cli-link}.
+
+* You know the relevant {prod-short} user namespace on the cluster.
++
+TIP: You can visit `pass:c,a,q[{prod-url}]/api/kubernetes/namespace` to get your {prod-short} user namespace as `name`.
+
+* You are on the {prod-short} user namespace on the cluster.
++
+[TIP]
+====
+On OpenShift:
+
+* You can use the `oc` command-line tool to check your current namespace:
++
+`$ oc project`
+
+* You can switch to your {prod-short} user namespace on a command line if needed:
++
+`$ oc project __<user_namespace>__`
+====
+
 .Procedure
 
 * To list your workspaces, enter the following on a command line:
@@ -25,7 +48,7 @@ user1-dev   python-hello-world   workspace69c26884bbc141f2   Failed    Container
 
 [TIP]
 ====
-You can view `PHASE` changes live by adding the `--watch` flag to this command.
+You can view *PHASE* changes live by adding the `--watch` flag to this command.
 ====
 
 [NOTE]
