--- a/modules/end-user-guide/partials/proc_creating-workspaces.adoc
+++ b/modules/end-user-guide/partials/proc_creating-workspaces.adoc
@@ -2,30 +2,50 @@
 [id="creating-workspaces"]
 = Creating workspaces
 
-It is recommended however, for users to create workspaces using the {prod-short} Dashboard instead of using {orch-name} APIs to manually create `DevWorkspace` and `DevWorkspaceTemplate` custom resources.
+Because workspaces on the {orch-name} cluster are represented by custom resources, and if your use case does not permit use of the {prod-short} dashboard, you can instead create workspaces with {orch-name} APIs by applying custom resources to the cluster.
 
-This is because creating workspaces using the {prod-short} Dashboard helps {prod-short} and its components convert the workspace project's devfile to `DevWorkspace` and `DevWorkspaceTemplate` custom resources on the cluster.
+[NOTE]
+====
 
-Creating workspaces using the {prod-short} dashboard allows {prod-short} to make the following additions to the newly created `DevWorkspaces`:
+Using the {prod-short} dashboard is the default way to create workspaces because {prod-short} and its components automatically convert the target Git repository's devfile into the `DevWorkspace` and `DevWorkspaceTemplate` custom resources on the cluster with the following configuration benefits:
 
 * Recognition of configurations in `spec.devEnvironments` specified in the `CheCluster` custom resource including:
-** persistent storage strategy specified with `devEnvironments.storage`
-** default editor specified with `devEnvironments.defaultEditor`
-** default plugins specified with `devEnvironments.defaultPlugins`
-** container build configuration specified with `devEnvironments.containerBuildConfiguration`
+** Persistent storage strategy specified with `devEnvironments.storage`
+** Default IDE specified with `devEnvironments.defaultEditor`
+** Default plugins specified with `devEnvironments.defaultPlugins`
+** Container build configuration specified with `devEnvironments.containerBuildConfiguration`
 * Recognition of the `DevWorkspaceOperatorConfig` configuration managed by {prod-short}
 
-Because workspaces on the {orch-name} cluster are represented by custom resources, you can create workspaces with {orch-name} APIs by applying custom resources to the cluster.
+====
 
 .Prerequisites
 
-* An active `{orch-cli}` session with permissions to create `DevWorkspace` and `DevWorkspaceTemplate` resources in your {orch-namespace} on the {orch-name} cluster. See {orch-cli-link}.
+* An active `{orch-cli}` session with permissions to create `DevWorkspace` and `DevWorkspaceTemplate` resources in your {orch-namespace} on the cluster. See {orch-cli-link}.
 
-NOTE: For admins creating workspaces for users, the `DevWorkspace` and `DevWorkspaceTemplate` custom resources should be created in a user namespace that is provisioned by {prod-short} or provisioned by the admin. See xref:administration-guide:configuring-namespace-provisioning.adoc[].
+* You know the relevant {prod-short} user namespace on the cluster.
++
+TIP: You can visit `pass:c,a,q[{prod-url}]/api/kubernetes/namespace` to get your {prod-short} user namespace as `name`.
+
+* You are on the {prod-short} user namespace on the cluster.
++
+[TIP]
+====
+On OpenShift:
+
+* You can use the `oc` command-line tool to check your current namespace:
++
+`$ oc project`
+
+* You can switch to your {prod-short} user namespace on a command line if needed:
++
+`$ oc project __<user_namespace>__`
+====
++
+NOTE: {prod-short} administrators who intend to create workspaces for other users must create the `DevWorkspace` and `DevWorkspaceTemplate` custom resources in a user namespace that is provisioned by {prod-short} or by the administrator. See xref:administration-guide:configuring-namespace-provisioning.adoc[].
 
 .Procedure
 
-. Create a `DevWorkspaceTemplate` for the editor.
+. Create a `DevWorkspaceTemplate` custom resource for the selected IDE.
 +
 .Creating a `DevWorkspaceTemplate` named `che-code` for the link:https://github.com/microsoft/vscode[Microsoft Visual Studio Code - Open Source] IDE
 ====
@@ -35,7 +55,7 @@ apiVersion: workspace.devfile.io/v1alpha2
 kind: DevWorkspaceTemplate
 metadata:
   name: che-code#<1>
-  namespace: __<user_{orch-namespace}>__#<2>
+  namespace: user1-dev#<2>
 spec:
   commands:
     - apply:
@@ -72,7 +92,7 @@ spec:
           - name: checode
             path: /checode
         memoryLimit: 1024Mi
-        image: 'quay.io/che-incubator/che-code:insiders' # no-op ignored image
+        image: 'quay.io/che-incubator/che-code:insiders'
         endpoints:
           - attributes:
               cookiesAuthEnabled: true
@@ -113,17 +133,16 @@ spec:
     preStart:
       - init-container-command
 ----
-<1> Name of the `DevWorkspaceTemplate`. This name will be used to reference the `DevWorkspaceTemplate` within the `DevWorkspace`.
-<2> Target {orch-namespace} for the new workspace.
+<1> Name of the `DevWorkspaceTemplate` custom resource. This name will be used to reference the `DevWorkspaceTemplate` custom resource within the `DevWorkspace` custom resource.
+<2> User namespace, which is the target {orch-namespace} for the new workspace.
 ====
 
-. To prepare the `DevWorkspace` custom resource, copy the contents of a project Devfile.
+. To prepare the `DevWorkspace` custom resource, copy the contents of the target Git repository's devfile.
 +
-.Copied devfile contents
+.Copied devfile contents with `schemaVersion: 2.1.0`
 ====
 [source,yaml,subs="+quotes,+attributes"]
 ----
-schemaVersion: 2.1.0    
 components:
   - name: tooling-container
     container:
@@ -133,9 +152,9 @@ components:
 +
 TIP: For more details, see the link:https://devfile.io/docs/2.1.0/what-is-a-devfile[devfile v2 documentation].
 
-. Use the devfile to create a `DevWorkspace` definition.
+. Create a `DevWorkspace` custom resource definition that incorporates the copied devfile contents from the previous step.
 +
-.Example title
+.A `DevWorkspace` custom resource definition
 ====
 [source,yaml,subs="+quotes,+attributes"]
 ----
@@ -143,11 +162,11 @@ kind: DevWorkspace
 apiVersion: workspace.devfile.io/v1alpha2
 metadata:
   name: my-devworkspace#<1>
-  namespace: __<user_{orch-namespace}>__#<2>
+  namespace: user1-dev#<2>
 spec:
   started: true#<3>
   contributions:#<4>
-    - name: editor
+    - name: IDE
       kubernetes:
         name: che-code#<5>
   template:
@@ -161,18 +180,18 @@ spec:
         container:
           image: quay.io/devfile/universal-developer-image:ubi8-latest
 ----
-<1> Name of `DevWorkspace` resource. This is will be the name of the new workspace.
-<2> Target {orch-namespace} for the new workspace.
-<3> Determines whether the workspace should be started upon creating the `DevWorkspace` resource.
-<4> Reference to the editor's `DevWorkspaceTemplate`.
-<5> Name of the editor's `DevWorkspaceTemplate` from the previous step.
-<6> Details about the Git project to clone upon workspace startup. The Git project that will be cloned for this example is https://github.com/eclipse-che/che-docs.
+<1> Name of the `DevWorkspace` custom resource. This is will be the name of the new workspace.
+<2> User namespace, which is the target {orch-namespace} for the new workspace.
+<3> Determines whether the workspace must be started when the `DevWorkspace` custom resource is created.
+<4> Reference to the `DevWorkspaceTemplate` custom resource of the selected IDE.
+<5> Name of the `DevWorkspaceTemplate` custom resource from the previous step.
+<6> Details about the Git repository to clone into the workspace when it starts.
 <7> List of components such as workspace containers and volume components.
 ====
 
 . Apply the `DevWorkspace` custom resource to the cluster. 
 
-. Verify that the workspace is starting by checking the `PHASE` status of the `DevWorkspace`.
+. Verify that the workspace is starting by checking the *PHASE* status of the `DevWorkspace`.
 +
 [subs="+quotes,attributes"]
 ----
@@ -188,9 +207,7 @@ user1-dev	     my-devworkspace       workspacedf64e4a492cd4701   Starting   Wait
 ----
 ====
 
-. When the workspace starts with the *PHASE* status *Running*, open the workspace by either way:
-** Visit the URL provided in the `INFO` section of the output from `{orch-cli} get devworkspaces`.
-** Open the workspace from the {prod-short} dashboard.
+. When the workspace has successfully started, its *PHASE* status changes to *Running* in the output of the `{orch-cli} get devworkspaces` command.
 +
 .Output
 ====
@@ -200,3 +217,8 @@ NAMESPACE            NAME                  DEVWORKSPACE ID             PHASE    
 user1-dev	     my-devworkspace       workspacedf64e4a492cd4701   Running    https://url-to-workspace.com
 ----
 ====
++
+You can then open the workspace by using one of these options:
++
+** Visit the URL provided in the `INFO` section of the output of the `{orch-cli} get devworkspaces` command.
+** Open the workspace from the {prod-short} dashboard.
