--- a/modules/end-user-guide/partials/proc_removing-workspaces.adoc
+++ b/modules/end-user-guide/partials/proc_removing-workspaces.adoc
@@ -8,9 +8,39 @@ WARNING: Deleting the `DevWorkspace` custom resource will also delete other work
 
 TIP: Remove workspaces by using the {prod-short} dashboard whenever possible.
 
-.Procedure
+.Prerequisites
 
-. Get the `__<workspace_name>__` of the workspace to remove and the `__<user_namespace>__`.
+* An active `{orch-cli}` session on the cluster. See {orch-cli-link}.
+
+* You know the workspace name.
++
+[TIP]
+====
+You can find the relevant workspace name in the output of the following command:
+
+`$ {orch-cli} get devworkspaces`
+====
+
+* You know the relevant {prod-short} user namespace on the cluster.
++
+TIP: You can visit `pass:c,a,q[{prod-url}]/api/kubernetes/namespace` to get your {prod-short} user namespace as `name`.
+
+* You are on the {prod-short} user namespace on the cluster.
++
+[TIP]
+====
+On OpenShift:
+
+* You can use the `oc` command-line tool to check your current namespace:
++
+`$ oc project`
+
+* You can switch to your {prod-short} user namespace on a command line if needed:
++
+`$ oc project __<user_namespace>__`
+====
+
+.Procedure
 
 * Run the following command to remove the workspace:
 +
