--- a/modules/end-user-guide/partials/proc_creating-workspaces.adoc
+++ b/modules/end-user-guide/partials/proc_creating-workspaces.adoc
@@ -13,12 +13,12 @@ Creating new workspaces through the {prod-short} dashboard provides better user 
 * {platforms-name} clients work automatically.
 * {prod-short} and its components automatically convert the target Git repository's devfile into the `DevWorkspace` and `DevWorkspaceTemplate` custom resources on the cluster.
 * Access to the workspace is secured by default with the `routingClass: che` in the `DevWorkspace` of the workspace.
-* Recognition of configurations in `spec.devEnvironments` specified in the `CheCluster` custom resource including:
-** Persistent storage strategy specified with `devEnvironments.storage`
-** Default IDE specified with `devEnvironments.defaultEditor`
-** Default plugins specified with `devEnvironments.defaultPlugins`
-** Container build configuration specified with `devEnvironments.containerBuildConfiguration`
-* Recognition of the `DevWorkspaceOperatorConfig` configuration managed by {prod-short}
+* Recognition of the `DevWorkspaceOperatorConfig` configuration is managed by {prod-short}.
+* Recognition of configurations in `spec.devEnvironments`is specified in the `CheCluster` custom resource including:
+** Persistent storage strategy is specified with `devEnvironments.storage`
+** Default IDE is specified with `devEnvironments.defaultEditor`
+** Default plugins are specified with `devEnvironments.defaultPlugins`
+** Container build configuration is specified with `devEnvironments.containerBuildConfiguration`
 
 ====
 
